objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Job_Responsibilities__c</fullName>
        <description>SFDC R3.0_Rahul Saxena_08/10/2012: New field is created as per the requirement 3215</description>
        <label>Job Responsibilities</label>
        <picklist>
            <picklistValues>
                <fullName>Audit/Risk/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business / Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud/Assurance/Risk /Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Data Base Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Data Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Project &amp; Portfolio Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Servers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Telecom/Networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Web/Internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics / Warehousing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #.
As per the requirement 3248 field label change to &quot;Job Seniority&quot;.
As per the requirement 3215 and 3215 keeping it as it is.</description>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Executive Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Financial Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Information Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Marketing Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Operating Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief Technology Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First level Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager or Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lecturer/Professor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing Director or VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President or Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional or Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program or Project Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Seniority__c</fullName>
        <description>SFDC R3.0_Rahul Saxena_03/10/2012: New field is created as per the requirement 3215.</description>
        <label>Job Seniority</label>
        <picklist>
            <picklistValues>
                <fullName>C-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Activity__c</fullName>
        <description>Value is one of the following, whichever is the most recent:
■Due date of the most recent event logged against the record.
■Due date of the most recently closed task associated with the record.
SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_First_Name__c</fullName>
        <formula>LastName &amp; &quot;, &quot;  &amp;  FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last, First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_by_Partner__c</fullName>
        <description>This field captures the time-stamp for any modification performed by the partner user.  It is used for the calculation of strike-count mechanism.</description>
        <label>Last Modified by Partner</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name_Local__c</fullName>
        <description>Last name in local language of user.</description>
        <label>Last Name (Local)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Phonetic__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Last Name (Phonetic)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Call__c</fullName>
        <description>This field will capture when Contact Center team was able to contact the Customer successfully through Phone.</description>
        <label>Last Successful Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Accepted_Summary__c</fullName>
        <formula>IF(ISPICKVAL( Lead_State__c ,&quot;Accepted&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Accepted Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Aging__c</fullName>
        <description>Caculates days since lead creation, for Assigned leads.
R2_8/23/2012 Modified the formula as per the defect 2635</description>
        <formula>NOW()-CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_BU__c</fullName>
        <description>It captures the Business Unit of the lead&apos;s owner</description>
        <label>Lead BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Currency__c</fullName>
        <formula>TEXT(CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_GBU__c</fullName>
        <description>It is used to capture the lead&apos;s owner GBU</description>
        <label>Lead GBU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Id__c</fullName>
        <description>This will used to capture Lead Id</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will used to capture Lead Id</inlineHelpText>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Indicator_Code__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Lead Indicator Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of Lead Owner. Automatically updated by the trigger.</description>
        <label>Lead Owner Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Qualifier__c</fullName>
        <description>SFDC R4.0: Added new field as per the requirement 4331.</description>
        <label>Lead Qualifier</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Rating_Combined_EM__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Lead Rating - Combined - EM</label>
        <picklist>
            <picklistValues>
                <fullName>A1  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A2  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A3  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A4  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B1  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B3  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B4  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C1  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C2  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C3  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C4  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D1  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D2  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D3  </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Reactivation_Date__c</fullName>
        <label>Lead Reactivation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Rejector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC R2.0_07/23/2012: New field is created as per the requirement #</description>
        <label>Lead Rejector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Date_Profile_Most_Recent__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Lead Score Date - Profile - Most Recent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: Added picklist values as per the new data model</description>
        <label>Lead Source - Most Recent</label>
        <picklist>
            <picklistValues>
                <fullName>HP.com - Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP.com - Contact Me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow/Live Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO - Natural Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM - Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party - Content Syndication/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_State__c</fullName>
        <description>State of Lead whether assigned,accepted or rejected</description>
        <label>Lead Acceptance</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Assignment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <description>Estimated Value of Lead</description>
        <label>Estimated Lead Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lead_is_Accepted__c</fullName>
        <formula>IF(         ISPICKVAL(  Lead_State__c , &quot;Accepted&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_is_Assigned__c</fullName>
        <formula>IF(         ISPICKVAL(  Lead_State__c , &quot;Assigned&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_is_Closed_Date__c</fullName>
        <label>Lead is Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_is_Closed__c</fullName>
        <formula>IF(         ISPICKVAL( Status , &quot;Closed&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_is_Open__c</fullName>
        <formula>IF(         ISPICKVAL( Status , &quot;Open&quot;) , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_is_Qualified__c</fullName>
        <formula>IF((RecordType.Name =&quot;Qualified Lead&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Qualified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_is_Rejected__c</fullName>
        <formula>IF(   ISPICKVAL(  Lead_State__c , &apos;Wrong Assignment&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead is Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Rejected_Reason_in_Notes__c</fullName>
        <formula>IF(ISPICKVAL(  Rejected_Reason__c  ,&quot;Reason in Notes&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Rejected Reason in Notes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Rejected_Wrong_Assignment_Sum__c</fullName>
        <formula>IF(ISPICKVAL(  Rejected_Reason__c  ,&quot;Wrong Assignment&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads Rejected Wrong Assignment Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Quantity__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>Legacy System Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_System__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>Legacy System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ref_Id__c</fullName>
        <description>Source System Lead ID</description>
        <externalId>true</externalId>
        <label>Source System Lead ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>List_Code__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_ID__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>List ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_In_Change_Date__c</fullName>
        <description>Email Opt-In Change Date
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Mail Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_in__c</fullName>
        <description>Mail Opt-in
SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_26/07/2012: 
Added picklist values as per the new data model</description>
        <label>Mail Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Assest__c</fullName>
        <label>Marketing Asset ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Asset_Name__c</fullName>
        <description>For Aprimo</description>
        <label>Marketing Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this object was deleted as the result of a merge, this field contains the ID of the record that was kept. If this object was deleted for any other reason, or has not been deleted, the value is null.
SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Opt_in_Change_Date__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Added picklist values as per the new data model</description>
        <label>Mobile Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>Net Price ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 6936.</description>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_System_Quantity__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>New System Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_System__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>New System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R2.0_07/23/2012: New field is created as per the requirement #</description>
        <label>Partner Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Owner_User_Language__c</fullName>
        <description>This field stores the value of the &quot;Laguage / Locale key&quot; for the partner user as lead owner. It is used to determine the language for partner notification email-templates. This field is populated by apex trigger.</description>
        <label>Partner Owner User Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Queue_Assigned_Date__c</fullName>
        <label>Partner Queue Assigned Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pathfinder_Link__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>Pathfinder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Performance_Increase__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>Performance Increase</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>SFDC R2.0_Ramzil_26/07/2012: 
Added field as per the new data sheet</description>
        <label>Phone Extension</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_in_Change_Date__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_23/07/2012: 
Changed datatype as per the new data model</description>
        <label>Phone Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Opt_in__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #
SFDC R2.0_Ramzil_26/07/2012: 
Added picklist values as per the new data model</description>
        <label>Phone Opt In</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <description>Preferred Method of Contact</description>
        <label>Preferred Method of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Telephone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Subjects__c</fullName>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #
Changes made as per the new data model [R2.0_Ramzil_7/25/2012]</description>
        <label>Preferred Subjects</label>
        <picklist>
            <picklistValues>
                <fullName>Thought Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus Intel, OLTP, Data W&apos;hsing, Info Opt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud Computing (Private,Hybrid,Public)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization (Server, Storage, Client)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Trans / Converged Infra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unified Comms / Network Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT and Business Process Outsourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology and Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT App, Infrastr &amp; Ops Management S&apos;ware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servers,Storage,Netwkg Prods &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Events</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Service_Solution__c</fullName>
        <description>List of Product/Service/Solution</description>
        <inlineHelpText>What is the lead interested in?</inlineHelpText>
        <label>Product/Service/Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Purchaser_Role__c</fullName>
        <description>Adding new field that can add more color to what their actual role is in the purchasing process as per R3.0 requirement 3240.</description>
        <label>Purchaser Role</label>
        <picklist>
            <picklistValues>
                <fullName>Business Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Sponsor / Banker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator/Recommender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP / Key Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Status__c</fullName>
        <description>It shows the Qualification Status of the lead</description>
        <label>Qualification Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Answer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Left Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referred to Someone Else</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification On-going</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not the correct decision maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualification_Team_ID__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Qualification Team ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Team_Name__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Qualification Team Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCS_Type__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>RCS Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Breakeven_months__c</fullName>
        <description>SFDC R6.0 By RS: Added new field as per the requirement 8250.</description>
        <label>ROI Breakeven (months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referred_by_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Referred by Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_by_Email_address__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Referred by (Email address)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Full_Name__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Referred by (Full Name)</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC R2.0_Julalin_16/07/2012: New field is created as per the requirement #</description>
        <label>Referred by Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>SFDC R2.0_Bala_16/07/2012: New field is created as per the requirement #</description>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>